# allGather

./: .env.example  .gitignore  CLAUDE.md  README-Docker.md  docker-compose.dev.yml  docker-compose.yml  start-backend.sh  start-dev.sh  start-frontend.sh  start-fullstack.sh
DriverScore_backend-main/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  prestart.sh  pyproject.toml  requirement.txt
DriverScore_backend-main/alembic/: env.py
DriverScore_backend-main/alembic/versions/: a14c3ac0a4c9_initial_schema.py
DriverScore_backend-main/configs/: settings.docker.yaml  settings.yaml
DriverScore_backend-main/driver_score/: __init__.py  app.py  initial_data.py  main.py  settings.py  test_pre_start.py
DriverScore_backend-main/driver_score/common/: models.py
DriverScore_backend-main/driver_score/core/: __init__.py  database.py  models.py
DriverScore_backend-main/driver_score/db/: engine.py  models.py
DriverScore_backend-main/driver_score/domains/: router.py
DriverScore_backend-main/driver_score/domains/allgather/: __init__.py  api.py  constant.py  schemas.py  service.py
DriverScore_backend-main/driver_score/domains/common/: deps.py  schemas.py  service.py
DriverScore_backend-main/driver_score/domains/driver/: api.py  service.py
DriverScore_backend-main/driver_score/domains/model/: schemas.py  service.py
DriverScore_backend-main/driver_score/domains/route/: api.py  enums.py  schema.py  service.py
DriverScore_backend-main/driver_score/domains/route/curve/: service.py
DriverScore_backend-main/driver_score/domains/run/: api.py  schemas.py  service.py
DriverScore_backend-main/driver_score/domains/summary/: api.py  schema.py  service.py
DriverScore_backend-main/notebook/: LRS.ipynb
DriverScore_backend-main/sql/: create_db.sql  drop_db.sql
DriverScore_backend-main/sql_schema/: current_schema.sql  docker_schema.sql
DriverScore_backend-main/sql_schema/sql/: rc_by_range.sql  rc_by_type.sql
DriverScore_backend-main/tests/: test_driver_score_algo.py
DriverScore_frontend-main/: Dockerfile.dev  README.md  index.html  modify-openapi-operationids.js  nginx-backend-not-found.conf  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
DriverScore_frontend-main/src/: config.json  main.tsx  routeTree.gen.ts  theme.tsx  utils.ts
DriverScore_frontend-main/src/client/: index.ts
DriverScore_frontend-main/src/client/models/: Body_AllGather_upload.ts  Body_Routes_curve_upload.ts  Body_Routes_upload.ts  DriverScoreOutSchema.ts  DriverScorePropertiesSchema.ts  DrivingDirection.ts  GpsSampleSchema.ts  ImuSampleSchema.ts  PivotTableByRCRangeSchema.ts  PivotTableByRCTypeSchema.ts  RcType.ts  RouteBasedRCSchema.ts  RunSchema.ts
DriverScore_frontend-main/src/client/schemas/: $Body_AllGather_upload.ts  $Body_Routes_curve_upload.ts  $Body_Routes_upload.ts  $Coordinates.ts  $DriverScoreOutSchema.ts  $DriverScorePropertiesSchema.ts  $DrivingDirection.ts  $GpsSampleSchema.ts  $ImuSampleSchema.ts  $LineStringModel.ts  $PivotTableByRCRangeSchema.ts  $PivotTableByRCTypeSchema.ts  $RcType.ts  $RouteBasedRCSchema.ts  $RunSchema.ts
DriverScore_frontend-main/src/client/services/: AllGatherService.ts  DriversService.ts  RoutesService.ts  RunsService.ts  SummaryService.ts
DriverScore_frontend-main/src/components/Common/: Navbar.tsx  NotFound.tsx  Sidebar.tsx  SidebarItems.tsx  UserMenu.tsx
DriverScore_frontend-main/src/features/Map/: index.ts
DriverScore_frontend-main/src/features/Map/components/: CustomPolyline.tsx  DriverSessionModal.tsx  DrivingSession.tsx  EmptyMap.tsx  Gradient.tsx  MiniMap.tsx  RoadCharacteristics.tsx  SampleChart.tsx  Trajectory.tsx  index.ts
DriverScore_frontend-main/src/features/Map/enums/: index.ts  map.ts
DriverScore_frontend-main/src/features/Map/types/: drivingSession.tsx  index.ts  map.tsx
DriverScore_frontend-main/src/features/Map/utils/: index.ts  map.ts  sampleChart.ts
DriverScore_frontend-main/src/hooks/: useCustomToast.ts
DriverScore_frontend-main/src/routes/: __root.tsx  _layout.tsx  login.tsx
DriverScore_frontend-main/src/routes/_layout/: FileUpload.tsx  Map.tsx  index.tsx
